# template-package_data_tools

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml
notebooks/create_datacube/: create_datacube.ipynb  create_spatial_datacube.ipynb
