[build-system]
requires = ["uv_build>=0.7.8,<0.9.0"]
build-backend = "uv_build"

[project]
name = "Package_name"
version = "0.1.0"
description = "Environment template for a package named data-tools."
readme = "README.md"
authors = [
    { name = "Michael Steffen", email = "miyels@proton.me" }
]
license = { text = "MIT" }
requires-python = ">=3.12"

packages = [
	"src/package_name"
]

include = [
    "/data"
]

# Metadata for PyPI
keywords = ["data science", "geospatial", "pandas", "numpy", "scikit-learn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

# Main dependencies
dependencies = [
    "numpy>=1.26.2",
    "pandas>=2.1.0",
    "matplotlib>=3.7.2",
    "seaborn>=0.12.2",
    "scikit-learn>=1.5.0",
    "scipy>=1.11.2",
    "imbalanced-learn>=0.11.0",
    "geopandas>=1.0.0",
    "h5py>=3.10.0",
    "fiona>=1.8.22,<2.0.0",
    "shapely>=2.0.2",
    "tqdm>=4.65.0",
    "pyarrow>=14.0.1",
    "rasterio>=1.3.8",
    "xarray>=2025.8.0",
]

[project.urls]
"Source Code" = "https://github.com/msmiyels/template-package_data_tools"
"Bug Tracker" = "https://github.com/msmiyels/template-package_data_tools/issues"

[project.optional-dependencies]

# Notebooks
notebook = [
    "notebook>=7.0.0",
    "ipykernel>=6.0.0",
]

# Image processing
image = [
    "opencv-python>=4.0.0",
    "Pillow>=11.0.0",
]

# XML stuff
xml = [
    "lxml>=5.0.0",
]

# Testing
dev-tools= [
	"ruff>=0.12.11",
    "pytest>=8.4.0",
    "pre-commit>=4.3.0",
]

# All-in-one dev group
dev = [
    "data-tools[notebook,image,xml,dev-tools]",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# "E", "F":	defaults for flake8
# "I":		activates import sorting from isort
# "UP":		activates pyupgrade rules
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
minversion = "8.0"

testpaths = [
    "tests",
]

# -v:		verbose mode
# -s:       output of print() statements during test
addopts = "-v -s"

python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

cache_dir = ".pytest_cache"